base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interop-be-probing-api
  name: interop-be-probing-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interop-be-probing-api
  strategy: {}
  template:
    metadata:
      labels:
        app: interop-be-probing-api
    spec:
      containers:
      - image: ghcr.io/pagopa/interop-be-probing-api:develop
        name: interop-be-probing-api
        resources: {}
        ports: 
          - containerPort: 8080
            name: http
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interop-be-probing-eservice-operations
  name: interop-be-probing-eservice-operations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interop-be-probing-eservice-operations
  strategy: {}
  template:
    metadata:
      labels:
        app: interop-be-probing-eservice-operations
    spec:
      containers:
      - image: ghcr.io/pagopa/interop-be-probing-eservice-operations:develop
        name: interop-be-probing-eservice-operations
        resources: {}
        ports: 
          - containerPort: 8080
            name: http
status: {}
